made changes to the backend code

--- a/frontend/realstate/src/app/app.component.html
+++ b/frontend/realstate/src/app/app.component.html
@@ -2,7 +2,7 @@
 <app-header></app-header>
 <br><br><br>
 
-<app-slider></app-slider>
+<!-- <app-slider></app-slider> -->
 
 <!-- PAGE COMPONENT -->
 <app-home></app-home>
