--- a/frontend/realstate/src/app/components/card/card.component.html
+++ b/frontend/realstate/src/app/components/card/card.component.html
@@ -1,9 +1,9 @@
-
-<div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.3s" style="visibility: visible; animation-delay: 0.3s; animation-name: fadeInUp;">
+<!-- col-lg-3 col-sm-6 mx-auto wow fadeInUp -->
+<div class="" data-wow-delay="0.3s" style="visibility: visible; animation-delay: 0.3s; animation-name: fadeInUp;">
     <a class="cat-item d-block bg-light text-center rounded p-3" href="">
         <div class="rounded p-4">
             <div class="icon mb-3">
-                <img class="img-fluid" src="{{image}}" alt="Icon">
+                <img class="img-fluid" src="{{image}}" alt="Icon" width="50px" height="50px">
             </div>
             <h6>{{name}}</h6>
             <span>{{number}} Properties</span>
