--- a/frontend/realstate/src/app/pages/home/home.component.html
+++ b/frontend/realstate/src/app/pages/home/home.component.html
@@ -3,16 +3,30 @@
     <div class="container">
         <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
             <h1 class="mb-3">Property Types</h1>
-            <p>Eirmod sed ipsum dolor sit rebum labore magna erat. Tempor ut dolore lorem kasd vero ipsum sit eirmod sit. Ipsum diam justo sed rebum vero dolor duo.</p>
+            <p class="text-justify" >Explore a variety of property types to suit your needs. From spacious apartments to charming houses and luxurious villas. Discover commercial spaces for your business ventures. Find the perfect property type that matches your preferences.</p>
         </div>
-        <div class="row g-4">
+        <div class="row ">
             
             <!-- Custom-Category-Card -->
             <app-card
+                class="col-lg-3"
                 [name]="'Apartment'"
                 [number]="'123'"
                 [image]="'https://upload.wikimedia.org/wikipedia/commons/thumb/3/34/Home-icon.svg/2048px-Home-icon.svg.png'"
             />
+
+
+                <div class="" *ngFor="let type of types">
+                    
+                    <app-card
+                    class="col-sm-3"
+                    [name]="type.name"
+                    [number]="type.total"
+                    [image]="'https://upload.wikimedia.org/wikipedia/commons/thumb/3/34/Home-icon.svg/2048px-Home-icon.svg.png'"
+                    />
+                    
+                </div>
+
             <!-- END-Custom-Card -->
             
             <!-- TODO ADD ALL OF THIS INTO DB -->
@@ -107,7 +121,7 @@
             <div class="col-lg-6">
                 <div class="text-start mx-auto mb-5 wow slideInLeft" data-wow-delay="0.1s">
                     <h1 class="mb-3">Property Listing</h1>
-                    <p>Eirmod sed ipsum dolor sit rebum labore magna erat. Tempor ut dolore lorem kasd vero ipsum sit eirmod sit diam justo sed rebum.</p>
+                    <p>Discover our diverse property listings for buying or renting. Find your ideal home or investment opportunity. Detailed descriptions and images provided. Start your property search now. </p>
                 </div>
             </div>
             <div class="col-lg-6 text-start text-lg-end wow slideInRight" data-wow-delay="0.1s">
